# customer-vendor-api

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/apis/: customer_vendor.py  receitaws.py
src/assets/: cnpjs.json
src/constants/: abbreviations.py  districts.py  municipalities.py  streets.py
src/utils/: formatter.py
src/views/: home.py
