[project]
name = "Customer Vendor API"
version = "0.1.0"
description = "Automation customer and vendor registration within Totvs RM using the RM API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "gabriel-pagani", email = "gabrielpaganidesouza@gmail.com" }
]
dependencies = [
  "flet==0.80.2",
  "pyodbc==5.3.0",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.2",
]

[tool.flet]
org = "com.gabrielpagani"
product = "Customer Vendor Automation"
company = "Gabriel Pagani"
copyright = "Copyright (C) 2026 by Gabriel Pagani"

[tool.flet.app]
path = "src"